--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Austrian fiction -- Translations into English'
 - !lcc 'PT'
+- GITenberg
 title: 'Asbeïn: From the Life of a Virtuoso'
 url: http://www.gutenberg.org/ebooks/35396
